--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.6.2"
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "prettier": "2.6.2",
+    "typescript": "^4.7.2"
   }
 }
